--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-2">
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f1f1f1;">
+            <nav class="navbar navbar-expand-lg navbar-light" style="background: white;">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">LOGO</a>
               <div class="gap"></div>
@@ -32,7 +32,8 @@
                       Jeans
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Skinny</a></li>
+                      <li><a class="dropdown-item" style="color: black !important;
+						background: #dbdbdb !important;" href="#">Skinny</a></li>
                       <li><a class="dropdown-item" href="#">Relaxed</a></li>
                       <li><a class="dropdown-item" href="#">Bootcut</a></li>
                       <li><a class="dropdown-item" href="#">Straight</a></li>
@@ -52,13 +53,13 @@
                   </li>
                   <div class="gap-small"></div>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Contact</a>
+                      <a class="nav-link link-regular" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Newsletter</a>
+                      <a class="nav-link link-regular" href="#">Newsletter</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Subscribe</a>
+                      <a class="nav-link link-regular" href="#">Subscribe</a>
                     </li>
                 </ul>
               </div>
