--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-3">
-            <nav class="navbar navbar-expand-lg navbar-light bg-navbar">
+            <nav class="navbar navbar-expand-lg navbar-color navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">LOGO</a>
               <div class="gap"></div>
