--- a/index.html
+++ b/index.html
@@ -66,8 +66,14 @@
             </div>
           </nav>
         </div>
-        <div class="col-lg-9 text-left">
-            <h6 class="display-6">Jeans</h6>
+        <div class="col-lg-9 d-flex justify-content-between title">
+          <div class="left">
+              <h6 class="display-6">Jeans</h6>
+          </div>
+          <div class="right d-flex justify-content-center">
+            <span class="iconify icon" data-icon="entypo:shopping-cart"></span>
+            <span class="iconify icon" data-icon="fa:search"></span>
+          </div>
         </div>
     </div>  
     </div>
