--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-3 ">
             <nav class="navbar navbar-expand-lg navbar-color navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">LOGO</a>
@@ -66,13 +66,106 @@
             </div>
           </nav>
         </div>
-        <div class="col-lg-9 d-flex justify-content-between title">
-          <div class="left">
+        <div class="col-lg-9">
+          <div class="d-flex justify-content-between title">
+<div class="left">
               <h6 class="display-6">Jeans</h6>
           </div>
-          <div class="right d-flex justify-content-center">
+          <div class="right d-flex justify-content-center align-items-center">
             <span class="iconify icon" data-icon="entypo:shopping-cart"></span>
             <span class="iconify icon" data-icon="fa:search"></span>
+          </div>
+          </div>
+          <div class="box1 position-relative">
+            <img src="images/jeans.jpg" alt="Jeans">
+            <div class="box1-body position-absolute">
+              <h3 class="display-2 text-light">New arrivals</h3>
+              <p class="display-6 text-light text-uppercase">Collection 2016</p>
+              <a href="#" class="btn btn-black text-uppercase py-2 px-4">shop now</a>
+            </div>
+          </div>
+          <small class="text-muted">8 items</small>
+          <div class="row justify-content-center">
+            <div class="col-lg-3 col-5">
+              <div class="box-2">
+                <img src="images/jeans1.jpg">
+                <div class="box2-body">
+                  <h5 class="text-muted fw-normal">Ripped Skinny Jeans</h5>
+                  <div class="no-gap"></div>
+                  <p class="fw-bold">$24.99</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-5">
+              <div class="box-2">
+                <img src="images/jeans2.jpg"> 
+                <div class="box2-body">
+                  <h5 class="text-muted fw-normal">Mega Ripped Jeans</h5>
+                  <div class="no-gap"></div>
+                  <p class="fw-bold">$19.99</p>
+                </div>               
+              </div>
+            </div>
+            <div class="col-lg-3 col-5">
+              <div class="box-2">
+                <img src="images/jeans3.jpg"> 
+                <div class="box2-body">
+                  <h5 class="text-muted fw-normal">Washed Skinny Jeans</h5>
+                  <div class="no-gap"></div>
+                  <p class="fw-bold">$20.50</p>
+                </div>               
+              </div>
+            </div>
+            <div class="col-lg-3 col-5">
+              <div class="box-2">
+                <img src="images/jeans4.jpg">
+                <div class="box2-body">
+                  <h5 class="text-muted fw-normal">Vintage Skinny Jeans</h5>
+                  <div class="no-gap"></div>
+                  <p class="fw-bold">$14.99</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-5">
+              <div class="box-2">
+                <img src="images/jeans2.jpg">
+                <div class="box2-body">
+                  <h5 class="text-muted fw-normal">Mega Ripped Jeans</h5>
+                  <div class="no-gap"></div>
+                  <p class="fw-bold">$19.99</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-5">
+              <div class="box-2">
+                <img src="images/jeans3.jpg"> 
+                <div class="box2-body">
+                  <h5 class="text-muted fw-normal">Washed Skinny Jeans</h5>
+                  <div class="no-gap"></div>
+                  <p class="fw-bold">$20.50</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-5">
+              <div class="box-2">
+                <img src="images/jeans4.jpg">
+                <div class="box2-body">
+                  <h5 class="text-muted fw-normal">Vintage Skinny Jeans</h5>
+                  <div class="no-gap"></div>
+                  <p class="fw-bold text-orangered grayscale-50">$14.99</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-5">
+              <div class="box-2">
+                <img src="images/jeans1.jpg">
+                <div class="box2-body">
+                  <h5 class="text-muted fw-normal">Ripped Skinny Jeans</h5>
+                  <div class="no-gap"></div>
+                  <p class="fw-bold">$24.99</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
     </div>  
