--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
               <h6 class="display-6">Jeans</h6>
           </div>
           <div class="right d-flex justify-content-center align-items-center">
-            <span class="iconify icon" data-icon="entypo:shopping-cart"></span>
-            <span class="iconify icon" data-icon="fa:search"></span>
+            <span class="iconify" data-icon="entypo:shopping-cart"></span>
+            <span class="iconify" data-icon="fa:search"></span>
           </div>
           </div>
           <div class="box1 position-relative">
@@ -81,11 +81,11 @@
             <div class="box1-body position-absolute">
               <h3 class="display-2 text-light">New arrivals</h3>
               <p class="display-6 text-light text-uppercase">Collection 2016</p>
-              <a href="#" class="btn btn-black text-uppercase py-2 px-4">shop now</a>
+              <a href="#jeans" class="btn btn-black text-uppercase py-2 px-4">shop now</a>
             </div>
           </div>
           <small class="text-muted">8 items</small>
-          <div class="row justify-content-center">
+          <div class="row justify-content-center" id="jeans">
             <div class="col-lg-3 col-5">
               <div class="box-2">
                 <img src="images/jeans1.jpg">
@@ -97,7 +97,13 @@
               </div>
             </div>
             <div class="col-lg-3 col-5">
-              <div class="box-2">
+              <div class="box-2 position-relative">
+                <div class="hoverBox">
+                  <a href="#" class="btn btn-black">Buy Now <span class="iconify" data-icon="entypo:shopping-cart"></span></a>
+                </div>
+                <div class="position-absolute pos-badge">
+                  <h5><span class="badge badge-black">New</span></h5>
+                </div>
                 <img src="images/jeans2.jpg"> 
                 <div class="box2-body">
                   <h5 class="text-muted fw-normal">Mega Ripped Jeans</h5>
@@ -147,7 +153,13 @@
               </div>
             </div>
             <div class="col-lg-3 col-5">
-              <div class="box-2">
+              <div class="box-2 position-relative">
+                <div class="hoverBox">
+                  <a href="#" class="btn btn-black">Buy Now <span class="iconify" data-icon="entypo:shopping-cart"></span></a>
+                </div>
+                <div class="position-absolute pos-badge">
+                  <h5><span class="badge badge-black">Sale</span></h5>
+                </div>
                 <img src="images/jeans4.jpg">
                 <div class="box2-body">
                   <h5 class="text-muted fw-normal">Vintage Skinny Jeans</h5>
