Added Subscribe Section And Footer

--- a/index.html
+++ b/index.html
@@ -179,6 +179,67 @@
               </div>
             </div>
           </div>
+          <div class="subscribe-box">
+            <h3 class="display-5 text-light">Subscribe</h3>
+            <h5 class="fw-light text-light">To get special offers and VIP treatment:</h5>
+            <form action="#">
+              <input type="text" class="form-control" placeholder="Enter e-mail">
+              <button class="btn btn-orangered">Subscribe</button>
+            </form>
+          </div>
+          <footer class="site-footer">
+            <div class="row">
+              <div class="col-4">
+                <h3 class="fw-light text-center">Contact</h3>
+                <p class="fw-light text-center">Questions? Go ahead.</p>
+                <form action="#" class="frm">
+                  <input type="text" class="form-control" placeholder="Name">
+                  <input type="email" class="form-control" placeholder="Email">
+                  <input type="text" class="form-control" placeholder="Subject">
+                  <input type="text" class="form-control" placeholder="Message">
+                  <button type="submit" class="btn btn-black">Send</button>
+                </form>
+              </div>
+              <div class="col-4">
+                <h3 class="fw-light text-center">About</h3>
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                  <a href="#" class="btn btn-link link-black">About us</a>
+                  <a href="#" class="btn btn-link link-black">We're hiring</a>
+                  <a href="#" class="btn btn-link link-black">Support</a>
+                  <a href="#" class="btn btn-link link-black">Find Store</a>
+                  <a href="#" class="btn btn-link link-black">Shipment</a>
+                  <a href="#" class="btn btn-link link-black">Payment</a>
+                  <a href="#" class="btn btn-link link-black">Gift card</a>
+                  <a href="#" class="btn btn-link link-black">Return</a>
+                  <a href="#" class="btn btn-link link-black">Help</a>
+                </div>
+              </div>
+              <div class="col-4">
+                <h3 class="fw-light">Store</h3>
+                <ul class="lst-info">
+                  <li><span class="iconify" data-icon="fa6-solid:location-dot"></span> Company Name</li>
+                  <li><span class="iconify" data-icon="carbon:phone-filled"></span> 0044123123</li>
+                  <li><span class="iconify" data-icon="fluent:mail-16-filled"></span> ex@mail.com</li>
+                </ul>
+                <h3 class="fw-light">We accept</h3>
+                <ul class="lst-payment">
+                  <li><span class="iconify" data-icon="fontisto:american-express"></span> Amex</li>
+                  <li><span class="iconify" data-icon="fa-regular:credit-card"></span> Credit Card</li>
+                </ul>
+                <div class="sm">
+                  <a href="#"><span class="iconify" data-icon="ant-design:facebook-filled"></span></a>
+                  <a href="#"><span class="iconify" data-icon="akar-icons:instagram-fill"></span></a>
+                  <a href="#"><span class="iconify" data-icon="fa:snapchat"></span></a>
+                  <a href="#"><span class="iconify" data-icon="cib:pinterest-p"></span></a>
+                  <a href="#"><span class="iconify" data-icon="akar-icons:twitter-fill"></span></a>
+                  <a href="#"><span class="iconify" data-icon="akar-icons:linkedin-fill"></span></a>
+                </div>
+              </div>
+            </div>
+          </footer>
+          <div class="copyright">
+              <p class="text-light text-center">© 2022 | All Rights Reserved</p>
+            </div>
         </div>
     </div>  
     </div>
